<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_entries__search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_entries__share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_all_as_read"
        android:title="@string/menu_all_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_entries__settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_entries__about"
        android:title="@string/about_flym"
        app:showAsAction="never" />

</menu>